--- a/Projekt-2/package.json
+++ b/Projekt-2/package.json
@@ -1,12 +1,10 @@
 {
   "name": "projekt-2",
   "version": "1.0.0",
-  "description": "",
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon ./src/index.ts",
-    "autoload": "npm install @types/express @types/node @types/jsonwebtoken nodemon ts-node typescript express jsonwebtoken"
+    "start": "npx nodemon ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -28,5 +26,6 @@
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
-  }
+  },
+  "description": ""
 }
