--- a/Tasks/package.json
+++ b/Tasks/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "projekt-2",
+  "name": "tasks",
   "version": "1.0.0",
-  "main": "index.ts",
+  "description": "",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon ./src/index.ts"
+    "start": "npx nodemon server.ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/HPieniazek/Hubert-Pieniazek-pab.git"
-  },
-  "keywords": [],
-  "author": "50grosh",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/HPieniazek/Hubert-Pieniazek-pab/issues"
-  },
-  "homepage": "https://github.com/HPieniazek/Hubert-Pieniazek-pab#readme",
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
@@ -29,5 +21,8 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
-  "description": ""
+  "devDependencies": {
+    "dotenv": "^16.0.0",
+    "nodemon": "^2.0.15"
+  }
 }
