--- a/Tasks/package.json
+++ b/Tasks/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.21",
+    "ejs": "^3.1.8",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
